# projetfinal

./: .gitignore  CMakeLists.txt  README.md
include/: node.h  skybox.h  sphere.h  textured_cylinder.h  textured_lighting_sphere.h  textured_sphere.h  viewer.h
shaders/: phong.frag  phong_texture.frag  phong_texture.vert  phong_texture_cel.frag  skybox.vert  texture.frag  texture.vert
src/: main.cpp  node.cpp  shader.cpp  skybox.cpp  sphere.cpp  texture.cpp  textured_cylinder.cpp  textured_lighting_sphere.cpp  textured_sphere.cpp  viewer.cpp
